# llama-medical-finetuning

./: Makefile  README.md  gitignore  pyproject.toml  requirements.txt  setup.py
configs/: deepspeed_config.json  train_config.json
notebooks/: README.md  data_exploration.ipynb  results_analysis.ipynb
scripts/: download_model.sh  evaluate.sh  init_project.sh  prepare_data.sh  train.sh
src/analysis/: error_analysis.py
src/data/: dataset.py  processor.py  utils.py
src/evaluation/: evaluate.py  metrics.py
src/training/: config.py  train.py  trainer.py
src/utils/: aws_utils.py  logging_utils.py
